# linear_interpolation

./: CMakeLists.txt  README.md
include/: interpolate.hxx  linearInterpolation.hxx
test/: CMakeLists.txt  tests.cxx
